tests/expectations/compiler/records/nested_record_2_fail.out
DCE_ENABLED:
Error [ETYC0372050]: A record cannot contain a tuple.
    --> compiler-test:6:9
     |
   6 |         foo: (Foo, Foo),
     |         ^^^
Error [ETYC0372030]: A struct or record cannot contain another record.
    --> compiler-test:6:9
     |
   6 |         foo: (Foo, Foo),
     |         ^^^
     |
     = Remove the record `Foo` from `Token2`.
Error [ETYC0372030]: A struct or record cannot contain another record.
    --> compiler-test:6:9
     |
   6 |         foo: (Foo, Foo),
     |         ^^^
     |
     = Remove the record `Foo` from `Token2`.
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:2:9
     |
   2 | program test.aleo {
     |         ^^^^^^^^^

DCE_DISABLED:
Error [ETYC0372050]: A record cannot contain a tuple.
    --> compiler-test:6:9
     |
   6 |         foo: (Foo, Foo),
     |         ^^^
Error [ETYC0372030]: A struct or record cannot contain another record.
    --> compiler-test:6:9
     |
   6 |         foo: (Foo, Foo),
     |         ^^^
     |
     = Remove the record `Foo` from `Token2`.
Error [ETYC0372030]: A struct or record cannot contain another record.
    --> compiler-test:6:9
     |
   6 |         foo: (Foo, Foo),
     |         ^^^
     |
     = Remove the record `Foo` from `Token2`.
Error [ETYC0372083]: A program must have at least one transition function.
    --> compiler-test:2:9
     |
   2 | program test.aleo {
     |         ^^^^^^^^^
